<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/edit_round_score"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEditScore"
            android:inputType="number"
            android:hint="@string/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgTeam"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbA"
            android:text="@string/team_a_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space android:layout_width="16dp" android:layout_height="0dp"/>
        <RadioButton
            android:id="@+id/rbB"
            android:text="@string/team_b_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

</LinearLayout>
